--- a/app/views/display/tv.html.erb
+++ b/app/views/display/tv.html.erb
@@ -1,2 +1,18 @@
-<h1>Display#tv</h1>
-<p>Find me in app/views/display/tv.html.erb</p>
+<div id="tv" class="viewportheight">
+	<div id="scroll-container-1" class="scroll-container">
+        <div id="scroll-content-1" class="scroll-content" data-step="1" data-url="/display/projection_scroll_1">
+            <%= render partial: 'projection_scroll_1' %>
+        </div>
+    </div>
+	<div id="scroll-container-2" class="scroll-container">
+        <div id="scroll-content-2" class="scroll-content" data-step="3" data-url="/display/projection_scroll_2">
+	        <%= render partial: 'projection_scroll_2' %>
+        </div>
+    </div>
+
+	<div id="scroll-container-3" class="scroll-container">
+        <div id="scroll-content-3" class="scroll-content" data-step="5" data-url="/display/projection_scroll_3">
+            <%= render partial: 'projection_scroll_3' %>
+        </div>
+    </div>
+</div>
