--- a/app/views/transactions/new_public_utopist.html.erb
+++ b/app/views/transactions/new_public_utopist.html.erb
@@ -27,7 +27,10 @@
       <select id="transaction_seller_id" name="transaction[seller_id]">
              <option value="">Please select</option>
              <% Stock.where("active = true").order("symbol").each do |stock|%>
-                 <option value="<%= stock.utopist.id %>" data-base_price="<%= stock.base_price %>"><%= stock.symbol %> (<%= stock.utopist.name %>)</option>
+                 <option value="<%= stock.utopist.id %>" 
+                 	data-base_price="<%= stock.base_price %>"
+                 	data-stock_left="<%= stock.utopist.portfolio[:stocks][stock.id][:amount] %>"
+                 ><%= stock.symbol %>: <%= stock.name %> (<%= stock.utopist.name %>: <%= stock.utopist.portfolio[:stocks][stock.id][:amount] %>)</option>
             <% end %>
         </select>
     VERKAUFT AN 
@@ -37,7 +40,8 @@
   <p>
     <%= f.number_field :amount, :autocomplete => :off, :min => 0 %>
     ANTEILE SEINER/IHRER UTOPIE<br> 
-    ZUM PREIS VON JE <%= f.number_field :price, :readonly => true, :autocomplete => :off, :min => 0 %>DAS MACHT INSGESAMT: <span class="total">0</span>
+    ZUM PREIS VON JE <%= f.number_field :price, :autocomplete => :off, :min => 0 %>DAS MACHT INSGESAMT: <span class="total">0</span><br> 
+  	DER UTOPIST HÄLT DERZEIT NOCH <span class="remaining">0</span> ANTEILE.
   </p>
   
   <div class="actions">
