--- a/app/views/display/_stock_overview.html.erb
+++ b/app/views/display/_stock_overview.html.erb
@@ -1,4 +1,4 @@
-<h4>Hoffnung</h4>
+<h4>Potenzial</h4>
 <% ranks = Stock.ranks %>
 <% ranks.each do |key, value|%>
     <% stock = value[:stock] %>
@@ -7,8 +7,8 @@
 	<div class="stock-mini-tile">
 		<div class="stock-mini">
 			Platz <%= value[:rank] %><h5 class="symbol"><%= stock.symbol %> </h5>
-			<div class="investment u" data-stock-symbol="<%= stock.symbol %>" data-stock-attr="investment"><%= number_with_delimiter(stock.investment.to_i, delimiter: '.') %></div>
-			<div>			
+			<div class="investment" data-stock-symbol="<%= stock.symbol %>" data-stock-attr="investment"><%= number_with_delimiter(stock.investment.to_i, delimiter: '.') %></div>
+			<!--div>			
                 <span class="price u"><%= format_u stock.price %></span>
                 <span class="indicator">
                 <% if stock.trend > 0 %>
@@ -19,7 +19,7 @@
                     <abbr class="indicator-down">▼</abbr>
                 <% end %>                
                 </span>
-            </div>
+            </div-->
 		</div>
 	</div>
 <% end %>
