--- a/app/views/users/new_public.html.erb
+++ b/app/views/users/new_public.html.erb
@@ -2,7 +2,7 @@
 
 <div class="transaction_form">
 
-<p id="notice"><%= params[:notice] %></p>
+<p id="notice"><%= params[:notice] %><%= @notice %></p>
 
 <h1>New user</h1>
 
