finish portfolio printout

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -336,13 +336,12 @@ span.scroll-highlight {
 	margin-bottom: 40px;
 }
 
-.portfolio table + table.info-table {
-	margin-top: -10px;
+.portfolio table  + table {
+	margin-top: -20px;
 }
 
-.portfolio table.info-table + table.info-table,
- {
-	margin-top: -30px;
+.portfolio table.portfolio-table  + table {
+	margin-top: -10px;
 }
 
 .portfolio table th {
