finish portfolio printout more

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -330,6 +330,10 @@ span.scroll-highlight {
 	content: "\00a0 ";
 }
 
+.portfolio .spacer {
+}
+
+
 .portfolio table {
 	text-align: left;
 	border-collapse: collapse;
