--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -219,12 +219,17 @@ span.scroll-highlight {
 	height: 100%; 
 }
 
+#projection #page1 .tile2 .roll { 
+	padding:10px 10px 40px 10px;
+}
+
 #projection #page1 .roll .chart { 
 	height: 100%; 
 }
 
 #projection .page .chart {
 	width:100%;
+	height:100%;
 }
 
 .stock-mini-tile {
