--- a/app/views/display/_projection_scroll_1.html.erb
+++ b/app/views/display/_projection_scroll_1.html.erb
@@ -1,1 +1,1 @@
-UTOPIA STOCK EXCHANGE <span class="countdown scroll-highlight" data-countdown-to="<%= @market_session.created_at.to_i + (@market_session.duration * 60) %>" data-url="/market_sessions/end/<%= @market_session.id %>"></span> bis zum Ende dieser Handelsphase&nbsp; 
+UTOPIA STOCK EXCHANGE <span class="countdown scroll-highlight" data-countdown-to="<%= @market_session_end_seconds %>" data-url="/market_sessions/end/<%= @market_session.id if !@market_session.nil? %>"></span> bis zum Ende dieser Handelsphase&nbsp; 
