--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -1,4 +1,4 @@
-<div id="projection">
+<div id="projection" class="auto-reload-market-session">
 
 	<div id="scroll-container-1" class="scroll-container">
         <div id="scroll-content-1" class="scroll-content" data-step="1" data-url="/display/projection_scroll_1">
@@ -20,14 +20,14 @@
 	<div id="page1" class="page">
         
 		<div class="tile tile1">
-			<div id="chart-usx">
+			<div id="chart-usx" data-min="<%= @market_session_start_seconds %>" data-max="<%= @market_session_end_seconds %>">
 			</div>
 		</div>
 
 		<div class="tile tile2">
 			<div class="roll" data-timer="5000">
 				<% @stocks.order(:symbol).each do |s| %>
-				<div class="chart" id="chart-<%= s.symbol %>" data-symbol="<%= s.symbol %>" data-id="<%= s.id %>" data-title="<%= s.symbol %>">
+				<div class="chart" id="chart-<%= s.symbol %>" data-symbol="<%= s.symbol %>" data-id="<%= s.id %>" data-title="<%= s.symbol %>" data-min="<%= @market_session_start_seconds %>" data-max="<%= @market_session_end_seconds %>">
 				</div>
 				<% end %>
 			</div>			
