--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -192,7 +192,8 @@ span.scroll-highlight {
 
 #projection .page {
 	height:80vh;
-	margin-top:14vh
+	margin-top:14vh;
+	overflow:hidden;
 }
 
 #projection .page .tile {
@@ -201,35 +202,38 @@ span.scroll-highlight {
 }
 
 #projection .page .tile1 { 
-	width: 75%;
+	width: 70%;
 	height:70%;
 }
 #projection .page .tile2 { 
-	width: 25%;
+	width: 30%;
 	height:70%;
 }
 #projection .page .tile3 { 
-	width: 75%; 
+	width: 70%;
 }
 #projection .page .tile4 { 
-	width: 25%; 
+	width: 30%; 
 }
 
 #projection #page1 #chart-usx { 
 	height: 100%; 
 }
 
-#projection #page1 .tile2 .roll { 
-	padding:10px 10px 40px 10px;
-}
-
 #projection #page1 .roll .chart { 
-	height: 100%; 
+	 
 }
 
 #projection .page .chart {
 	width:100%;
-	height:100%;
+	height:70%;
+}
+
+#projection #page1 .tile2 .chart { 
+}
+
+#projection .page .tile3 h4 { 
+	padding-left: 1ex;
 }
 
 .stock-mini-tile {
@@ -238,7 +242,7 @@ span.scroll-highlight {
 }
 
 .stock-mini {
-	padding:4px;
+	padding:1ex;
 	font-family: 'ProximaNovaLight';
 }
 
