--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -283,11 +283,21 @@ span.scroll-highlight {
 }
 /**** HANDELSINTERFACE ****/
 
-.transaction_form {
-	margin: 20px;
-	font-size: 100%;
+#handelsinterface {
+	background-image: url("/assets/volando.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
+#handelsinterface #scroll-container-1 {
+	position:relative;
+}
+
+.transaction_form {
+	padding: 10%;
+	font-size: 100%;
+
+}
 
 .transaction_form form select, .transaction_form form input {
 	font-size: 100%;
