--- a/app/views/transactions/add_cash_public.html.erb
+++ b/app/views/transactions/add_cash_public.html.erb
@@ -1,4 +1,4 @@
-<div id="handelsinterface" class="viewportheight">
+<div id="handelsinterface" class="viewportheight screensaver">
 
   <div id="scroll-container-1" class="scroll-container">
         <div id="scroll-content-1" class="scroll-content" data-step="1" data-url="/display/projection_scroll_1">
