--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -176,6 +176,11 @@ span.scroll-highlight {
 	color:#F50006;
 }
 
+.say {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
 /**** PROJECTION PAGES ****/
 
 #projection .page {
