settings max_sellout

--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :base_cash_in %><br>
     <%= f.text_field :base_cash_in %>
   </div>
+  <div class="field">
+    <%= f.label :max_sellout %><br>
+    <%= f.text_field :max_sellout %>
+  </div>  
   <div class="actions">
     <%= f.submit %>
   </div>
