--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -10,5 +10,10 @@
   <%= @setting.base_cash_in %>
 </p>
 
+<p>
+  <strong>Max Sellout:</strong>
+  <%= @setting.max_sellout %>
+</p>
+
 <%= link_to 'Edit', edit_setting_path(@setting) %> |
 <%= link_to 'Back', settings_path %>
