--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -77,7 +77,7 @@ p#notice {
 	text-align: center;
 	background-color: red;
 	font-weight:bold;
-	position:fixed;
+	position:absolute;
 	top:0;
 	right:0;
 }
@@ -296,7 +296,7 @@ span.scroll-highlight {
 .transaction_form {
 	padding: 10%;
 	font-size: 100%;
-
+	position:relative;
 }
 
 .transaction_form form select, .transaction_form form input {
