test different Us

--- a/app/assets/stylesheets/local.css.erb
+++ b/app/assets/stylesheets/local.css.erb
@@ -152,6 +152,12 @@ span.scroll-highlight {
 	left: 0px;
 }
 
+/*
+#scroll-content-3 .u:after {
+	background-image: url("/assets/u-linear-white.png");
+}
+*/
+
 /**** GENERAL ****/
 
 .u:after {
