--- a/app/views/display/projection.html.erb
+++ b/app/views/display/projection.html.erb
@@ -19,7 +19,7 @@
 	<div id="page1" class="page">
         
 		<div class="tile tile1">
-			<div id="chart-usx" data-min="<%= @market_session_start_seconds %>" data-max="<%= @market_session_end_seconds %>">
+			<div id="chart-usx" data-min="<%= @market_session_start_seconds %>" data-max="<%= @market_session_end_seconds %>" data-chart-session-active="">
 			</div>
 		</div>
 
