--- a/app/views/display/tv.html.erb
+++ b/app/views/display/tv.html.erb
@@ -4,15 +4,16 @@
             <%= render partial: 'projection_scroll_1' %>
         </div>
     </div>
-	<div id="scroll-container-2" class="scroll-container">
-        <div id="scroll-content-2" class="scroll-content" data-step="3" data-url="/display/projection_scroll_2">
-	        <%= render partial: 'projection_scroll_2' %>
-        </div>
-    </div>
-
 	<div id="scroll-container-3" class="scroll-container">
         <div id="scroll-content-3" class="scroll-content" data-step="5" data-url="/display/projection_scroll_3">
             <%= render partial: 'projection_scroll_3' %>
         </div>
     </div>
+
+    <div id="page1" class="page viewportheight">
+    </div>
+
+    <div id="page2" class="page viewportheight">
+    </div>
+
 </div>
